--- a/contaxt.html
+++ b/contaxt.html
@@ -31,7 +31,7 @@
                     <div class="header-logo">
                         <img src="assets/images/Miwa_logo.png" alt="">
                     </div>
-                    <div class="open-menu-icon menu-icon">
+                    <div class="open-menu-icon hidden-pc menu-icon">
                         <i class="fa-solid fa-bars"></i>
                     </div>
                     <div class="close-menu-icon menu-icon">
